contrast correction

--- a/styles/base.css
+++ b/styles/base.css
@@ -42,9 +42,10 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #346596;
+    background-color: #2b2a2a;
     color: white;
-    padding: 10px;
+    padding: 10px 50px 10px 50px;
+     
 }
 
 main {
